--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
 		"isomorphic-unfetch": "^3.0.0",
 		"next": "^7.0.2",
 		"next-compose-plugins": "^2.1.1",
+		"next-react-svg": "^1.1.0",
 		"next-redux-wrapper": "^2.1.0",
 		"next-routes": "^1.4.2",
 		"next-runtime-dotenv": "^1.0.1",
 		"nock": "^10.0.6",
 		"node-sass": "^4.11.0",
+		"path": "^0.12.7",
 		"query-string": "^6.5.0",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
