--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,4 @@
 PROXY_MODE=local
 API_URL=http://localhost:3000
 API_KEY=NNKOjkoul8n1CH18TWA9gwngW1s1SmjESPjNoUFo
+SAMPLE_JSON=https://raw.githubusercontent.com/futuredayv/frontend-challenge/master/feed/sample.json
