--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"react-dom": "^16.8.6",
 		"react-redux": "^6.0.0",
 		"redux": "^4.0.1",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"rxjs": "^6.5.2"
 	},
 	"devDependencies": {
 		"@types/enzyme": "^3.9.1",
