--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"analyze": "cross-env BUNDLE_ANALYZE=both npm run build",
 		"cli": "node ./project-cli/dist/index.js a",
 		"postinstall": "cd project-cli && npm i && npm run build",
-		"test": "jest --coverage",
+		"test": "jest",
+		"test:cover": "npm test -- --coverage",
 		"lint": "eslint -c .eslintrc.js --ext .ts,.tsx {app,pages,src}/**",
 		"format": "eslint -c .eslintrc.js --ext .ts,.tsx --fix {app,pages,src}/**"
 	},
