Movies Tested Successfully.
fetch reads url from process.env to escape
.replace of undefined error of nock.

Browser will not like this. Therefore it may change to hard-coded.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@types/jest": "^24.0.12",
 		"@types/next": "^7.0.6",
 		"@types/next-redux-wrapper": "^2.0.2",
+		"@types/nock": "^10.0.3",
 		"@types/node": "^11.13.8",
 		"@types/react": "^16.8.14",
 		"@types/react-dom": "^16.8.4",
@@ -66,7 +67,6 @@
 		"eslint-config-prettier": "^4.3.0",
 		"eslint-plugin-prettier": "^3.1.0",
 		"eslint-plugin-react": "^7.13.0",
-		"fetch-mock": "^7.3.9",
 		"jest": "^24.7.1",
 		"nodemon": "^1.18.11",
 		"nyc": "^14.1.0",
